@@ -53,10 +53,14 @@ ret_code StubDir( int i, struct asm_tok tokenarray[] ){ return( ERROR ); }
 ret_code EchoDirective( int i, struct asm_tok tokenarray[] )
 /**********************************************************/
 {
-    if ( Parse_Pass == PASS_1 ) /* display in pass 1 only */
+    if ( Parse_Pass == PASS_1 ) { /* display in pass 1 only */
         if ( Options.preprocessor_stdout == FALSE ) { /* don't print to stdout if -EP is on! */
             printf( "%s\n", tokenarray[i+1].tokpos );
         }
+    }
+#ifdef DEBUG_OUT
+    else DebugMsg1(("EchoDirective - echo suppressed (pass > 1): %s\n", tokenarray[i+1].tokpos));
+#endif
     return( NOT_ERROR );
 }
 
